fixed align-items in footer-content

--- a/flexbox_styles.css
+++ b/flexbox_styles.css
@@ -43,7 +43,6 @@ header {
 }
 .footer-content{
     display: flex;
-    align-items: center;
     text-align: left;
     flex: 1 1 0;
 }
